[package]
name = "osint-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "process"] }
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["ws"] }
serde = { version = "1.0.203", features = ["derive"] }
tungstenite = { version = "0.23.0", features = ["native-tls"] }
ureq = { version = "2.9.7", features = ["json"] }
serde_json = "1.0.114"